--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
